Add documentation for 410 GONE. Add support for filtering on null in SqlFilterBuilder
